feat: add booking confirmation redirection and room availability check

--- a/views/room_detail.ejs
+++ b/views/room_detail.ejs
@@ -72,9 +72,12 @@
                       </span>
                       <span class="text-muted fs-5"> VND/đêm</span>
                     </div>
-                  <a href="/confirm-room/<%= room._id %>" class="btn btn-success btn-book w-100">
-                    <i class="bi bi-calendar-check me-2"></i>Đặt Ngay
-                  </a>
+                    <% if (!room.trangThai ) { %>
+                      <a href="/confirm-room/<%= room._id %>" class="btn btn-success btn-book w-100">
+                        <i class="bi bi-calendar-check me-2"></i>Đặt Ngay
+                      </a>
+                    <% } %>
+
 
                   </div>
                 </div>
